2005-09-22  Werner Koch  <wk@g10code.com>

	* engine-gpgme.c (decrypt_stream): Use gpgme_op_decrypt_verify.

	* gpgmsg.cpp (gatherAttachmentInfo): Ignore attestations when
	checking for pgp/mime.

	* pgpmime.c (pgpmime_decrypt): Added arg HWND.
	(message_cb, plaintext_handler): Write attachments.
	* pgpmime.c (base64_decode): New.
	* rfc822parse.c (parse_field): Treat Content-Disposition special.

	* gpgmsg.cpp (get_save_filename): Moved to ..
	* common.c (get_save_filename): .. here.

2005-09-20  Timo Schulz  <ts@g10code.com>

	* attach.c: New.
	* attach.h: New.
	* olflange.cpp (CGPGExchExt): Allocate class for
	attached file events.
	(QueryInterface): Return interface pointer for
	attached file events.
	* passphrase-dialog.c (load_secbox): Use new GPGME
	interface.
	(get_pubkey_algo_str): New.
	* verify-dialog.c (load_sigbox): Likewise.
	* recipient-dialog.c (load_recipbox): Likewise.

2005-09-19  Werner Koch  <wk@g10code.com>

	* msgcache.c (flush_if_needed): New.
	(msgcache_put): use it.
	* intern.h (opt): New compatibility flags AUTO_DECRYPT and
	NO_ATTESTATION.
	* olflange.cpp (InstallCommands): Use watcher stuff only when this
	option has been enabled.
	* gpgmsg.cpp (decrypt): Take care of NO_ATTESTATION.
	* main.c (DllMain): Removed debug output; this should not be
	used before initialization!
	* watcher.cpp: Include config.h.  Removed weird line endings.
	* gpgmsg.cpp (encrypt_and_sign): Call SaveChanges.

2005-09-15  Timo Schulz  <ts@g10code.com>

	* util.h: Provider watcher prototypes.
	* watcher.cpp (watcher_init_hook): New.
	(watcher_free_hook): New.
	(watcher_set_callback_ctx): New.
	(cbt_proc): New.
	* display.cpp (find_message_window): Removed GpgMsg param.
	Changed all callers.
	
2005-09-15  Werner Koch  <wk@g10code.com>

	* olflange.cpp (OnWriteComplete): Take care of EEME_FAILED.
	(OnWrite): Check that we are encrypting only plain text messages.

	* myexchext.h: Add flags used by OnReadComplete.

2005-09-14  Werner Koch  <wk@g10code.com>
