@@ -53,9 +53,6 @@ BEGIN
                     128,8
     LISTBOX         IDC_ENC_NOTFOUND,8,158,313,22,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Optionen",IDC_STATIC,8,185,108,24
-    CONTROL         "Ausgabe als &Text",IDC_ENC_OPTARMOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,20,195,71,10
     DEFPUSHBUTTON   "&OK",IDOK,221,196,50,14
     PUSHBUTTON      "&Abbrechen",IDCANCEL,273,196,50,14
 END
@@ -276,9 +273,6 @@ BEGIN
                     8
     LISTBOX         IDC_ENC_NOTFOUND,8,158,313,22,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Options",IDC_STATIC,8,185,108,24
-    CONTROL         "&Text Output",IDC_ENC_OPTARMOR,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,20,195,53,10
     DEFPUSHBUTTON   "&OK",IDOK,221,196,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,273,196,50,14
 END
